--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur perferendis sapiente quasi autem similique, sunt dolorem aliquam quaerat fugiat assumenda quae repudiandae quas voluptatem laborum soluta accusantium, unde, blanditiis deserunt.</p>
+    <h3>my name is trina</h3>
+    <h6>i am a student</h6>
+    <link rel="stylesheet" href="style.css">
 </body>
 </html>
